--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 */
 
 * {
-    outline: 1px dotted black;
+  outline: 1px dotted black;
 }
 
 /* Doodle Stage */
@@ -14,12 +14,19 @@
   background: #ccc;
   height: 300px;
   width: 600px;
+
+  position: relative;
 }
 
-#heart1 {
-  fill: red;
+#stage:hover h1 {
+  left: 0;
+  transition: left 1s;
+  opacity: 1;
 }
 
-#heart2 {
-  fill: green;
+#stage h1 {
+  position: absolute;
+  bottom: 0;
+  left: -200px;
+  opacity: 0;
 }
