--- a/css/styles.css
+++ b/css/styles.css
@@ -23,15 +23,14 @@ h1 {
 
 #stage:hover h1 {
   left: 0;
-  /* transition: left 1s; */
   opacity: 1;
 }
 
 #stage h1 {
   position: absolute;
   bottom: 0;
-  /* left: -200px; */
   opacity: 0;
+  transition: opacity 1s;
 }
 
 #stage:hover p {
@@ -45,10 +44,7 @@ h1 {
   top: 0;
   padding: 2em 2em 2em 2em;
   opacity: 0;
-}
-
-#snow {
-}
-
-#snow1 {
+  color: white;
+  font-family: arial;
+  transition: opacity 1s;
 }
